<resources>
    <string name="app_name">Visits</string>
    <string name="now">Now</string>
    <string name="enter_driver_id">enter driver id</string>
    <string name="hyperTrackPublishKey">paste your publishable key here</string>
    <string name="channel_name">HyperTrack Notifications</string>
    <string name="channel_id">HyperTrack</string>
    <string name="channel_description">HyperTrack Visits app notifications</string>
    <string name="file_provider_authority" translatable="false">com.hypertrack.logistics.android.github.fileprovider</string>
    <string name="replace_picture">Replace Picture</string>
    <string name="location">Location</string>
    <string name="customer_note">Customer Note</string>
    <string name="items">Items</string>
    <string name="visit_notes">Visit Notes</string>
    <string name="visit_picture">Proof of Visit</string>
    <string name="take_picture">Take Picture</string>
    <string name="mark_completed">Mark Completed</string>
    <string name="completed">Completed or Canceled</string>
    <string name="use_the_link_to_login">Please use the link to login or contact your manager to get one</string>
    <string name="visits">Visits</string>
    <string name="background_location_permission_rationale">The permission is required to automatically start tracking location based on your work schedule (without you having to open app). The app will always show a notification when tracking is active.</string>
    <string name="background_location_permission_option_hint">To adjust the permission press</string>
    <string name="continue_btn_text">Allow</string>
    <string name="whitelisting_btn_text">Go to Settings</string>
    <string name="title_activity_permission_request">PermissionRequestActivity</string>
    <string name="allow_background_location_access">Allow All the Time Location Access</string>
    <string name="hypertrack_logistics_app">HyperTrack Visits App</string>
    <string name="submit_driver_id">Next</string>
    <string name="check_in">Add Visit</string>
    <string name="clock_in">Clock In</string>
    <string name="check_out">Complete Visit</string>
    <string name="clock_out">Clock Out</string>
    <string name="pick_up">On my way</string>
    <string name="cancel">Cancel Visit</string>
    <string name="unnamed_street">Unnamed street</string>
    <string name="unknown_city">Unknown city</string>
    <string name="unknown_country">Nowhere</string>
    <string name="unknown_location_at">\"Unknown location at \"</string>
    <string name="trip_to">Trip to</string>
    <string name="geofence_at">Geofence at</string>
    <string name="local_visit_on">Local Visit On </string>
    <string name="item_singular">Item</string>
    <string name="item_plural">Items</string>
    <string name="visited">Visited</string>
    <string name="pending">Pending</string>
    <string name="no_planned_visits">No trips assigned to you</string>
    <string name="device_deleted">"Device Deleted"</string>
    <string name="generic_tracking_error">"Tracking Failure"</string>
    <string name="splashscreenlogo">splashScreenLogo</string>
    <string name="account_login_header_text">Sign into your account</string>
    <string name="login_hint">Cannot get login from the deeplink. Sign in or contact your manager to get the link.</string>
    <string name="email_address">Business email</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="account_login_error_message">Can\'t login with provided credentials</string>
    <string name="check_login_credentials_hint" />
    <string name="empty_string" />
    <string name="vist_note_updated">Visit note was updated</string>
    <string name="cannot_create_file_msg">Can\'t create a file for a picture. Check if there\'s enough space</string>
    <string name="whitelisting_rational">Disable power optimization to make tracking durable</string>
    <string name="summary_total_tracking_time">Tracked duration</string>
    <string name="summary_drive">Drives</string>
    <string name="summary_walk">Walks</string>
    <string name="summary_stop">Stops</string>
    <string name="clock_hint_tracking_on">Pressing the switch will stop location tracking</string>
    <string name="clock_hint_tracking_off">Pressing the switch will start location tracking</string>
    <string name="cancel_visit_confirmation">Are you sure you want to cancel this visit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string-array name="visit_state_group_names">
        <item>@string/pending</item>
        <item>@string/visited</item>
        <item>@string/completed</item>
    </string-array>
    <string name="duration">%1$d hr, %2$d min</string>
    <string name="duration_minutes">%1$d min</string>
    <string name="steps">%1$d steps</string>
    <string name="miles">%s mi</string>
    <string name="kms">%s km</string>
    <string name="close">Close</string>
    <string name="device_id">Device ID</string>
    <string name="driver_id">Driver ID</string>
    <string name="app_version">App Version</string>
    <string name="bottom_app_bar_logo_content_desc">Opens history timeline</string>
    <string name="retry">Retry</string>
    <string name="photo_upload_unknown_error">Unknown error during uploading photo</string>
    <string name="history_error">Error when loading history</string>
    <string name="skip">Skip</string>
    <string name="unknown_error">Unknown error</string>
    <string name="wrong_code">Code is incorrect</string>
    <string name="code_from_clipboard">Code have pasted from clipboard</string>
    <string name="password_too_short">Password length must be 8 characters or more </string>
    <string name="invalid_email">Invalid email</string>
    <string name="clocked_in">You are clocked in</string>
    <string name="clocked_out">You are clocked out</string>
    <string name="notification_important_channel_name">HyperTrack Important Notifications</string>
    <string name="notification_important_channel_description">HyperTrack Visits app notifications</string>
    <string name="notification_new_trip">A new trip was assigned to you</string>
    <string name="permissions_allow_location_access">Please allow Location permissions</string>
    <string name="permission_rationale_1">This app collects activity and location data \n to  manage your work on the move \n even when the app is closed or not in use</string>
    <string name="permission_rationale_2">We use this data to:\n
        - Show your movement history\n
        - Optimize routes\n
        - Mark places you visit\n
        - Make expense claims easier\n
        - Compute daily stats \n\t\t(like total driven distance)
    </string>
    <string name="permission_rationale_3">We also need to access accelerometer to detect when you drive or walk</string>
    <string name="timeline_summary">Tracking summary: %s</string>
    <string name="timeline_inactive_reason_location_permissions_denied">Location permissions denied</string>
    <string name="timeline_inactive_reason_location_services_disabled">Location services disabled</string>
    <string name="timeline_inactive_reason_motion_activity_permissions_denied">Activity permission denied</string>
    <string name="timeline_inactive_reason_motion_activity_services_disabled">Activity service disabled</string>
    <string name="timeline_inactive_reason_motion_activity_services_unavailable">Activity service unavailable</string>
    <string name="timeline_inactive_reason_tracking_stopped">Tracking stopped</string>
    <string name="timeline_inactive_reason_tracking_service_terminated">Tracking service terminated</string>
    <string name="timeline_inactive_reason_unexpected">Unknown outage</string>
    <string name="orders_list">Orders</string>
    <string name="orders_list_current_trip">Current trip</string>
    <string name="orders_list_no_trip">You don\'t have orders</string>
    <string name="order_complete">Complete</string>
    <string name="order_cancel">Cancel</string>
    <string name="order_save_note">Save</string>
    <string name="order_cancel_note">Discard</string>
    <string name="order_cancel_confirmation">Are you sure you want to CANCEL this order?</string>
    <string name="order_complete_confirmation">Are you sure you want to COMPLETE this order?</string>
    <string name="order_note_hint">Enter order notes</string>
    <string name="order_already_completed">Order is already completed</string>
    <string name="order_already_canceled">Order is already canceled</string>
    <string name="order_status">Status</string>
    <string name="order_picked_up">Picked up</string>
    <string name="places_no_places">You don\'t have Places yet</string>
    <string name="places_visited">Visited %s</string>
    <string name="places_last_visit">Last visit: %s</string>
    <string name="places_directions_button">Show in Maps app</string>
    <string name="places_not_visited">Not visited</string>
    <string name="places_exit">Exit</string>
    <string name="places_enter">Enter</string>
    <string name="place_visit_id">Visit ID</string>
    <string name="place_route_ro">Traveled %s for %s</string>
    <string name="place_details_visits_history">Visits history</string>
    <string name="place_details_no_visits">No visits</string>
    <string name="place_visits_count">Visits</string>
    <string name="place_today">Today</string>
    <string name="place_yesterday">Yesterday</string>
    <string name="add_place_confirm">Confirm</string>
    <string name="add_place_create">Create geofence</string>
    <string name="add_place_set_on_map">Set on map</string>
    <string name="add_place">Add place</string>
    <string name="add_place_address">Address</string>
    <string name="add_place_geofence_name">Geofence name</string>
    <string name="add_place_geofence_description">Description</string>
    <string name="place_info_add_integration">Add integration</string>
    <string name="place_info_confirm_disabled">You have to provide company name</string>
    <string name="place_integration_search_hint">Enter company name</string>
    <string name="place_integration_empty_placeholder">No entities found</string>
    <string name="place_integration_submit_button">Add company</string>
    <string name="place_integration_integration_type">Integration type</string>
    <string name="profile_report_an_issue">Report an issue</string>
    <string name="profile_report_sent">App state is successfully reported</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="disabled">Disabled</string>
    <string name="unknown">Unknown</string>
    <string name="tracking_is">Tracking is %s</string>
    <string name="no_connection">No connection</string>
    <string name="where_are_you_going">Where are you going?</string>
    <string name="i_m_going_to">I’m going to</string>
    <string name="arrival">Arrival</string>
    <string name="away">Away</string>
    <string name="share_trip">Share</string>
    <string name="you_have_ongoing_orders">You have %d ongoing %s</string>
    <string name="trip">Trip</string>
    <string name="trips">Trips</string>
    <string name="resume">Resume</string>
    <string name="end_trip">Complete</string>
    <string name="trip_started_from">Trip started from</string>
    <string name="_min">%d min</string>
    <string name="tracking">Tracking</string>
    <string name="lat_lng">%.4f, %.4f</string>
    <string name="arriving_now">Arriving now</string>
    <string name="arrived">Arrived</string>
    <string name="miles_mins">%.2f miles • %d mins</string>
    <string name="set_on_map">Set on map</string>
    <string name="confirm">Confirm</string>
    <string name="searching_">Searching…</string>
    <string name="home">Home</string>
    <string name="status_stopped">stopped</string>
</resources>